# Alloy

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  install.sh  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: architecture.md  building.md  commands-api.md  contributing.md  features.md  getting-started.md  streaming.md  troubleshooting.md
home/neo/Проекты/alloy/src/: App.tsx
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/assets/: malicious_npm.txt
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/policies/: com.github.alloy.fish.policy
src-tauri/src/: commands.rs  fish.rs  lib.rs  main.rs  malware_check.rs  models.rs  services.rs  updater.rs
src-tauri/src/services/: appimage.rs  aur_ops.rs  deb.rs  pacman_ops.rs  pkg_analyze.rs  pkg_build.rs  pkg_tar.rs  rpm.rs  system_info.rs  tar.rs
src/components/: AurStore.tsx  DropZone.tsx  Sidebar.tsx  ui.tsx
src/lib/: reviews.ts  safeInvoke.ts
src/pages/: ApplicationsPage.tsx  ConfigPage.tsx  MaintenancePage.tsx  NewsPage.tsx  PackagesPage.tsx  SettingsPage.tsx  SystemUpdatePage.tsx
src/store/: index.ts
src/types/: error.ts  index.ts
