[package]
name = "alloy"
version = "1.0.0"
edition = "2021"

[lib]
name = "alloy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
miniz_oxide = "0.9"
crc32fast = "1.4"

[dev-dependencies]
tauri = { version = "2", features = ["test", "tray-icon"] }
tokio-test = "0.4"
tempfile = "3"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
shlex = "2.0"
portable-pty = "0.9"
thiserror = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
